# SRAgent

./: .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  pyproject.toml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pytest.yaml
SRAgent/: organisms.py  record_db.py  search.py  secret.py  settings.yml  utils.py
SRAgent/agents/: bigquery.py  convert.py  efetch.py  elink.py  entrez.py  entrez_convert.py  esearch.py  esummary.py  find_datasets.py  metadata.py  ncbi_fetch.py  planner.py  sequences.py  sragent.py  supervisors.py  tissue_ont.py  tissue_ontology.py  utils.py  workers.py
SRAgent/cli/: SRX2SRR.py  SRX_info.py  __main__.py  entrez.py  entrez_agent.py  find_datasets.py  metadata.py  metadata_agent.py  sragent.py  srx_info.py  tissue_ontology.py  utils.py
SRAgent/db/: connect.py  create.py  fix.py  get.py  record_db.py  update.py  upsert.py  utils.py
SRAgent/tools/: bigquery.py  convert.py  efetch.py  elink.py  entrez.py  entrez_db.py  esearch.py  esummary.py  ncbi_fetch.py  planner.py  seq.py  sequences.py  sra_tools.py  tissue_ont.py  tissue_ontology.py  utils.py
SRAgent/workflows/: SRX_info.py  convert.py  convert2metadata.py  find_datasets.py  metadata.py  srx_info.py  tissue_cat.py  tissue_ont.py  tissue_ontology.py  utils.py
cron/: find-datasets.py
notebooks/: SRA_bigquery.ipynb  add_existing_srx.ipynb  cxg-get-metadata.ipynb  db_check.ipynb  db_test2prod.ipynb  db_update.ipynb  gcp_postgesql.ipynb  ncbi-fetch.ipynb  species_umap.ipynb
notebooks/agent_sandbox/: entrez-sup_agent.ipynb  get-datasets.ipynb  map-reduce-sra.ipynb  map-reduce.ipynb  tools.ipynb
notebooks/esearch_agent/: entrez2srx1.ipynb  entrez_agent1.ipynb  entrez_agent2.ipynb  entrez_agent3.ipynb  get-datasets1.ipynb  get-datasets2.ipynb  get-datasets3.ipynb  get-datasets4.ipynb  get-datasets5.ipynb  get-datasets6.ipynb  map-reduce-sra1.ipynb  map-reduce-sra2.ipynb  map-reduce-sra3.ipynb  map-reduce-sra4.ipynb  map-reduce-sra5.ipynb  map-reduce-sra6.ipynb  map-reduce-sra7.ipynb  map-reduce1.ipynb  map-reduce2.ipynb  planner1.ipynb  planner2.ipynb  srx2metadata.ipynb  tools1.ipynb
scripts/: acc2srr.py  bioproject2srx.py  dataset-finder.py  db-tools.py  eval.py  h5ad-to-parquet.py  obs-csv-to-parquet.py  uberon-obo-embed.py
tests/: test_cli_help.py
tests/agents/: test_utils.py
tests/tools/: test_bigquery.py  test_efetch.py  test_esearch.py  test_esummary.py  test_ncbi_fetch.py  test_sequences.py  test_tissue_ontology.py  test_utils.py
tests/workflows/: test_utils.py
