[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SRAgent"
version = "0.1.0"
description = "AI agents for finding public biological datasets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT license" }
authors = [
    { name = "Nick Youngblut", email = "nyoungb2@gmail.com" },
]
urls = { "Homepage" = "https://github.com/arcinstitute/SRAgent" }
dependencies = [
    "python-dotenv==1.0.1",
    "pandas==2.2.3",
    "langchain==0.3.7",
    "langchainhub==0.1.21",
    "langchain_community==0.3.5",
    "openai==1.54.3",
    "langchain_openai==0.2.6",
    "langgraph==0.2.45",
    "biopython==1.84",
    "xmltodict==0.14.2",
    "gspread==6.1.4",
    "gspread-dataframe==4.0.0",
    "beautifulsoup4==4.12.3",
    "google-cloud-bigquery==3.27.0",
    "google-cloud-bigquery-storage==2.27.0",
    "db-dtypes==1.3.1",
    "pypika==0.48.9"
]

[project.scripts]
SRAgent = "SRAgent.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["SRAgent"]
exclude = ["tmp", "data", "tests", "*.tests", "*.tests.*", "tests.*", "tests"]
